<resources>
    <string name="app_name">CocktailMachine</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title">Title</string>
    <string name="verf_gbar">verfügbar</string>
    <string name="show_if_available_or_not">show if available or not</string>
    <string name="nicht_verf_gbar">nicht verfügbar</string>
    <string name="alkholisch">alkoholisch</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="zutat">Zutat:</string>
    <string name="volumen">Volumen:</string>
    <string name="_30_ml">30 ml</string>
    <string name="minimales_pumpvolumen">minimales Pumpvolumen:</string>
    <string name="item_desc">Desc igjöljgr</string>
    <string name="item_name">Name rijih</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="txt_notificationData">No Notification</string>
    <string name="txt_ReadCharacteristicData">No Characteristic Value</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="data_available">Data is available</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="no_data">No Data</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="add_recipe">add Recipe here</string>
    <string name="add_liquid">add Liquid here</string>
    <string name="add_volume">add Volume here</string>
    <string name="add_liquid2">add Liquid2 here</string>
    <string name="add_volume2">add Volume2 here</string>
    <string name="add_liquid3">add Liquid3 here</string>
    <string name="add_volume3">add Volume3 here</string>
    <string name="add_liquid4">add Liquid4 here</string>
    <string name="add_volume4">add Volume4 here</string>
    <string name="add_liquid5">add Liquid5 here</string>
    <string name="add_volume5">add Volume5 here</string>
    <string name="add_user">add user name here</string>
    <string name="btn_addUser">aad User</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_clean">Clean</string>
    <string name="btn_makeRecipe">Make Recipe</string>
    <string name="btn_definePump">Define Pump</string>
    <string name="btn_defineRecipe">Define Recipe</string>
    <string name="btn_addLiquid">Add Liquid</string>
    <string name="btn_calibrate">Calibrate</string>
    <string name="btn_ReadPumpsVolume">Read Liquids</string>
    <string name="btn_ReadRecipes">Read Recipes</string>
    <string name="btn_ReadCocktail">Current Cocktail</string>
    <string name="btn_ReadStates">Read States</string>
    <string name="txt_add_Slot">Add Slot</string>
    <string name="btn_refillPump">Refill Pump</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_editRecipe">Edit Recipe</string>
    <string name="swipe">S W I P E</string>
    <string name="messages_header">Message Header</string>
    <string name="signature_title">Signature Title</string>
    <string name="reply_title">Reply_title</string>
    <string name="sync_header">Sync Header</string>
    <string name="sync_title">Sync Title</string>
    <string name="attach_summary_off">Attach Summary off</string>
    <string name="attachment_summary_off">attachment_summary_off</string>
    <string name="attachment_summary_on">attachment_summary_on</string>
    <string name="attachment_title">attachment_title</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_scale_settings">ScaleSettingsActivity</string>
</resources>