<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zutat"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintEnd_toEndOf="@+id/textView_min_pump_volume_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_pump_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingredient_name"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintStart_toEndOf="@+id/textView_name_desc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_pump_volume_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/volumen"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintEnd_toEndOf="@+id/textView_min_pump_volume_desc"
        app:layout_constraintTop_toBottomOf="@+id/textView_pump_ingredient_name" />

    <TextView
        android:id="@+id/textView_pump_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_30_ml"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintStart_toEndOf="@+id/textView_min_pump_volume_desc"
        app:layout_constraintTop_toBottomOf="@+id/textView_pump_ingredient_name" />

    <TextView
        android:id="@+id/textView_min_pump_volume_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minimales_pumpvolumen"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_pump_volume_desc" />

    <TextView
        android:id="@+id/textView_min_pump_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_30_ml"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintStart_toEndOf="@+id/textView_min_pump_volume_desc"
        app:layout_constraintTop_toBottomOf="@+id/textView_pump_volume" />


</androidx.constraintlayout.widget.ConstraintLayout>